--- a/apps/no-brainer/package.json
+++ b/apps/no-brainer/package.json
@@ -1,43 +1,58 @@
 {
   "name": "no-brainer",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "dev": "expo start -c",
+    "android": "expo start -c --android",
+    "ios": "expo start -c --ios",
+    "web": "expo start -c --web",
+    "clean": "rm -rf .expo node_modules",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:update": "jest --updateSnapshot"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.4.7",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.9",
-    "expo": "~54.0.12",
-    "expo-font": "~14.0.8",
-    "expo-sqlite": "^16.0.8",
+    "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "expo": "^54.0.12",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.10",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.12",
+    "lucide-react-native": "^0.511.0",
+    "nativewind": "4.1.23",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.2",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
-    "zustand": "^5.0.8"
+    "react-native-svg": "15.12.1",
+    "react-native-web": "~0.21.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-typescript": "^7.27.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
-    "@types/jest": "^30.0.0",
-    "@types/react": "~19.1.0",
-    "babel-jest": "^30.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~19.1.15",
+    "babel-jest": "^29.7.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "jest": "^30.2.0",
-    "jest-expo": "^52.0.6",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.12",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.2"
   },
   "private": true
