feat(no-brainer): Task 11: PDF 저장 기능 개발

--- a/apps/no-brainer/app.json
+++ b/apps/no-brainer/app.json
@@ -17,14 +17,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.devboku.nobrainer"
     },
     "android": {
       "edgeToEdgeEnabled": true,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.devboku.nobrainer"
     },
     "web": {
       "bundler": "metro",
