--- a/apps/no-brainer/package.json
+++ b/apps/no-brainer/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/slot": "^1.2.0",
@@ -20,8 +21,10 @@
     "clsx": "^2.1.0",
     "expo": "^54.0.12",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "^0.32.12",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "^16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.12",
@@ -30,6 +33,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.2",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
@@ -37,7 +41,8 @@
     "react-native-web": "~0.21.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
